--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+html, body {
+  background-color: #000000; /* Set the background color to black */
+  color: #E0E0E0; /* Optional: Set a default text color that contrasts with the black background */
+  margin: 0;
+  padding: 0;
+  height: 100%; /* Ensure the body takes the full height of the viewport */
+  overflow: hidden; /* Prevent scrolling */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+#__next {
+  height: 100%; /* Ensure the Next.js root element takes the full height */
 }
